--- a/app/javascript/features/home/hero/hero.module.scss
+++ b/app/javascript/features/home/hero/hero.module.scss
@@ -4,7 +4,7 @@ $color_3: rgb(250, 250, 250);
 
 .section {
   background-position: 50% 50%;
-  padding: 48px 0px 48px;
+  padding: 18px 0px 48px;
 
   .container {
     max-width: 1400px;
@@ -20,54 +20,28 @@ $color_3: rgb(250, 250, 250);
       color: $color_1;
 
       display: flex;
-      height: 665.906px;
+      // height: 665.906px;
 
       justify-content: center;
       overflow-wrap: break-word;
 
-      transform-origin: 668px 332.953px;
+      // transform-origin: 668px 332.953px;
       // width: 1336px;
       background: rgb(255 153 1) none repeat scroll 0% 0% / auto padding-box border-box;
-      border: 0px none rgb(35, 35, 35);
-      border-radius: 32px;
+
       flex-flow: row wrap;
-      font: 16px / 24px Inter;
-      outline: rgb(35, 35, 35) none 0px;
-      padding: 48px;
+      // padding: 48px 34px;
+
+      padding: 3rem;
+      border-radius: 2rem;
 
       .picture {
-        color: $color_1;
-
-        height: 569.906px;
-
-        max-width: 100%;
-
-        min-height: auto;
-
-        min-width: auto;
-        overflow-wrap: break-word;
-
-        transform-origin: 310px 284.953px;
         width: 50%;
-        border: 0px none rgb(35, 35, 35);
-        flex: 0 0 auto;
-        font: 16px / 24px Inter;
-        outline: rgb(35, 35, 35) none 0px;
         padding: 0px 16px;
 
         .avatar {
-          color: $color_1;
-
-          display: block;
-          // height: 569.906px;
-
-          overflow-wrap: break-word;
-          vertical-align: middle;
           width: 100%;
-          border: 0px none rgb(35, 35, 35);
           border-radius: 16px;
-          font: 16px / 24px Inter;
-          outline: rgb(35, 35, 35) none 0px;
           transition: all 0.3s ease 0s;
         }
       }
