--- a/app/javascript/features/project/stats/project-stats.module.scss
+++ b/app/javascript/features/project/stats/project-stats.module.scss
@@ -1,28 +1,17 @@
 .section {
-  // padding: 48px 0px 48px;
+  background: #1e266d !important;
   .container {
     max-width: 1400px;
     margin: 0 auto;
     padding: 100px 60px;
 
-    display: flex;
-    justify-content: center;
-
-    .yd_flex {
-      // position: relative;
+    .wrapper {
       display: flex;
-      // text-align: left;
       align-items: center;
+      justify-content: space-between;
 
-      .yd_flex_1 {
-        // -webkit-box-flex: 1;
-        // -ms-flex: 1;
-        // flex: 1;
-
-        .flex_content {
-          // max-width: 420px;
-          margin: 0;
-
+      .info {
+        .content {
           h2 {
             font-size: 28px;
             font-weight: 600;
@@ -75,52 +64,39 @@
         }
       }
 
-      .yd_flex_2 {
-        // -webkit-box-ordinal-group: 2;
-        // -ms-flex-order: 1;
-        order: 1;
-
-        // -webkit-box-flex: 0;
-        // -ms-flex: 0 0 50%;
-        flex: 0 0 50%;
-
-        .flex_main {
+      .metrics_list {
+        max-width: 40vw;
+        .metrics {
           display: flex;
           flex-wrap: wrap;
           justify-content: center;
 
-          .flex_sub {
+          .metric {
             align-items: center;
             flex-basis: calc(50% - 24px);
             flex-direction: column;
-            justify-content: center;
-            margin: 0;
-            padding: 15px 10px;
-            position: relative;
-            background: rgb(248, 249, 250);
-            background: #1e266d;
+            // justify-content: center;
+            // margin: 0;
+            // padding: 15px 10px;
+            // position: relative;
+            // background: rgb(248, 249, 250);
+            // background: #1e266d;
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 1px;
             display: flex;
             cursor: pointer;
-            margin-bottom: 0;
+            // margin-bottom: 0;
             transition: box-shadow 0.3s ease-in-out;
 
-            margin: 0;
+            // margin: 0;
             padding: 32px;
 
-            .sub_image {
+            .icon {
               margin: 0px 0 20px;
-
-              img {
-                width: 60px;
-                height: 60px;
-              }
             }
 
-            .sub_text {
+            .note {
               text-align: center;
-
               h4 {
                 font-size: 14px;
                 font-weight: 600;
@@ -143,82 +119,5 @@
         }
       }
     }
-    .justify_content_center {
-      align-items: flex-start;
-    }
   }
-}
-
-.bg_blue {
-  background: #1e266d !important;
-}
-
-.bg_white {
-  background: #f8f8f9 !important;
-}
-
-.f_image {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 540px;
-  flex: 0 0 540px;
-  margin-top: 0 !important;
-
-  padding: 0 35px;
-  height: 300px;
-
-  .image {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-.contribute {
-  font-family: 'Montserrat';
-  padding: 10px 30px;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 2px;
-  text-transform: lowercase;
-  white-space: nowrap;
-  cursor: pointer;
-  background-color: transparent;
-  // background: #1e266d;
-  color: #1e266d;
-
-  // color: #ffffff;
-  border: 1px solid #1e266d;
-  border-radius: 50px;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  transition: 0.2s;
-  margin: 20px 0 0 0;
-}
-
-.subtitle {
-  font-size: 13px !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: #607d9c;
-  line-height: 1.3;
-}
-
-.title {
-  font-weight: 600;
-  color: #445555;
-  line-height: 1.4;
-  font-size: 30px !important;
-}
-
-.description {
-  letter-spacing: 0.01em;
-  color: #818198;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 17px !important;
-  font-weight: 400 !important;
-  color: rgba(0, 0, 0, 0.5);
-  line-height: 1.6;
-  margin-top: 20px;
 }
